FIX: Mobile layout is borken on Firefox

--- a/themes/pixboost/assets/css/page-home.css
+++ b/themes/pixboost/assets/css/page-home.css
@@ -292,7 +292,7 @@
     }
 }
 
-@media all and (max-width: 35em) {
+@media all and (max-width: 560px) {
     .hero {
         height: 400px;
         flex-direction: column;
